[package]
name = "tsndt-ebpf"
version = "0.1.0"
edition = "2021"

[dependencies]
tsndt-common = { path = "../tsndt-common" }

aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }
network-types = "0.0.8"


[build-dependencies]
which = { workspace = true }

[[bin]]
name = "tsndt"
path = "src/main.rs"
